fixed squished bug

--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,12 @@
 
 .Button {
   margin: 5%;
-  width: 125px;
-  height: 50px;
+  width: 200px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.2em;
 }
 
 .Button:hover {
@@ -51,10 +52,22 @@
 
 .StartB {
   background-color: #00b159;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.StartB:hover {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .StopB {
   background-color: #d11141;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.StopB:hover {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .runeTable {
@@ -65,7 +78,5 @@
 }
 
 .runeRow {
-  display: flex;
-  justify-content: space-around;
   height: 5%;
 }
